# websocket-ledmatrix-snake

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
systemd/system/: service
