[package]
name = "websocket-ledmatrix-snake"
description = "Runs snake on my websocket-ledmatrix"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/websocket-ledmatrix-snake"
authors = ["EdJoPaTo <websocket-ledmatrix-snake-rust@edjopato.de>"]
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
futures-util = "0.3"
rand = "0.9"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smarthome-math = { git = "https://github.com/EdJoPaTo/smarthome-math", branch = "main", default-features = false, features = ["bracket-color"] }
snake-logic = { git = "https://github.com/EdJoPaTo/snake-logic", branch = "main", default-features = false, features = ["rand"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
maintainer-scripts = "systemd/system/"
systemd-units = {}
assets = [
	["target/release/websocket-ledmatrix-snake", "/usr/bin/", "755"],
	["LICENSE", "/usr/share/licenses/websocket-ledmatrix-snake/", "644"],
	["README.md", "/usr/share/doc/websocket-ledmatrix-snake/", "644"],
]
